linked clear.css which fixed nav alignment issues of trade pagea and made cursor like pokeball. also I changed title of some pages

--- a/static/trade.css
+++ b/static/trade.css
@@ -209,8 +209,8 @@ select {
 
 #nav {
     font-size: 20px;
-    margin-top: -5px;
-    margin-left: 715px;
+    margin-top: -770px;
+    margin-left: 270px;
     position: absolute;
 }
 
